@@ -19,10 +19,18 @@ MD5 1fc0cea9b2ea2303cd2346843dc08803 files/xautostart.conf 59
 RMD160 ca1ea3f1b82caa6e97d94835d88a39a6f153ff7a files/xautostart.conf 59
 SHA256 13398e0ffcd7005bc8c92f3cd62865d2601e52fc980a4702fa252bef5c1efcc7 files/xautostart.conf 59
 DIST open-vm-tools-2007.09.04-56574.tar.gz 1987725 RMD160 8bb9952471ff5635e70741afd357170b6c0a8307 SHA1 d3ffcd974e67b5f83b760582f8c2606721d94403 SHA256 4e4a5c805ffcbcf8de9deca9b96dd874d2be405a994729a4becf3501b73b46bc
+DIST open-vm-tools-2007.10.08-SNAPSHOT.tar.gz 2419956 RMD160 2f4de4b8f47866bbcbc8f846b3d835db736d1adc SHA1 b4ff62ddfde889898de779a2670f19438090aa7f SHA256 81a55d15c080131d160598b4ec34003d3f66680c06f574fc2435f8fd3bed2359
 EBUILD open-vm-tools-0.0.20070904.56574.ebuild 3793 RMD160 832f2aee5ac13bd9ef4d4832ba2e5d04ef10c6fd SHA1 8ee7b49789a7c24c19072ca97fdd4e7597ca919f SHA256 09dc189ef719ab31a376e8c18e25770241097d235a5c229454050880befb92fc
 MD5 915d258fd2c3207df34d2f03cfe785ec open-vm-tools-0.0.20070904.56574.ebuild 3793
 RMD160 832f2aee5ac13bd9ef4d4832ba2e5d04ef10c6fd open-vm-tools-0.0.20070904.56574.ebuild 3793
 SHA256 09dc189ef719ab31a376e8c18e25770241097d235a5c229454050880befb92fc open-vm-tools-0.0.20070904.56574.ebuild 3793
+EBUILD open-vm-tools-0.0.20071008.99999.ebuild 3792 RMD160 277d5a7d9493f62ee1fa21158c50fcd2039086db SHA1 1dc04c111fc90eaeefa761b0fff63ad235036b4d SHA256 001a1d8543ddbb24355447620224bae2f1e445ede7a5c8f78d8486a6c37f269a
+MD5 51f1f8c0bec2251db2e4e01367e2f0c9 open-vm-tools-0.0.20071008.99999.ebuild 3792
+RMD160 277d5a7d9493f62ee1fa21158c50fcd2039086db open-vm-tools-0.0.20071008.99999.ebuild 3792
+SHA256 001a1d8543ddbb24355447620224bae2f1e445ede7a5c8f78d8486a6c37f269a open-vm-tools-0.0.20071008.99999.ebuild 3792
 MD5 d0c42ef7b94e0aefbe09669b04adca0d files/digest-open-vm-tools-0.0.20070904.56574 295
 RMD160 43e2167130241214052b6fa7a739e80e574363be files/digest-open-vm-tools-0.0.20070904.56574 295
 SHA256 0e711a2915155961282df966b61408929cd10db16623356571bd7597d1b3bb62 files/digest-open-vm-tools-0.0.20070904.56574 295
+MD5 196fc713bb78d2db557c91b809307df5 files/digest-open-vm-tools-0.0.20071008.99999 304
+RMD160 eb98bebe2cb2f596488f73d52e20f78eb889c045 files/digest-open-vm-tools-0.0.20071008.99999 304
+SHA256 63ef8240d5eb64e978eaed0fa0a273165840d3bdeb14a885e465388f38ea555f files/digest-open-vm-tools-0.0.20071008.99999 304
